<resources>
    <string name="app_name">Spark Messenger</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account.</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_i_ve_an_account">Already, I\'ve an Account.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="status">status</string>
    <string name="sign_out">Sign out</string>
    <string name="search">Search</string>
</resources>